--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ Licence URI: https://www.os-templates.com/template-terms
       <p>HypnoticHack is a closed source hack written in Objective-C for iOS.</p>
       <footer>
         <ul class="nospace inline pushright">
-          <li><a class="btn" href="https://cdn.discordapp.com/attachments/865499705634586656/974311236110004325/com.overlay.hack_0.19.0-1.deb">Download</a></li>
+          <li><a class="btn" href="https://oxy.name/d/tFxf">Download</a></li>
           <li><a class="btn inverse" href="https://dsc.gg/hypnotic">Discord</a></li>
         </ul>
       </footer>
